# margin-guard

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: changelog-on-merge.yml  ci.yml  release.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/tests/: conftest.py  test_api_health.py  test_cost_price_csv.py  test_cost_price_repository.py  (+6 more)
apps/web/: .gitignore  README.md  package-lock.json  package.json
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/margin_guard_worker/: __init__.py  celery_app.py
apps/worker/src/margin_guard_worker/tasks/: sync.py
changelogs/: README.md  TEMPLATE.md  collector.py  sanitize_filename.py
changelogs/0.1.0/: feature_cost-price-csv.md  feature_docker-demo-startup.md  feature_readme-showcase.md  release_v0.1.0.md
changelogs/unreleased/: feature_changelog-workflow.md  feature_ci-docker-build.md  feature_cost-price-csv.md  feature_db-alembic.md  feature_demo-command.md  feature_docker-demo-startup.md  feature_margin-preview-cost-prices.md  feature_mock-margin-alert.md  feature_readme-release-assets.md  feature_readme-showcase.md  feature_web-dashboard-shell.md  fix_demo-windows-output.md
demo/: cost-prices.csv
docs/: CONTRIBUTING.md  WORKFLOW.md  development.md
docs/adr/: 0001-architecture.md
scripts/: changelog_extract.py  changelog_release.py  create_changelog.py  run_demo.py
scripts/tests/: test_changelog_collector.py  test_changelog_extract.py  test_run_demo.py
(+45 files in other folders)
