[project]
name = "margin-guard-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "margin-guard-api",
    "celery[redis]>=5.4.0",
]

[tool.uv.sources]
margin-guard-api = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/margin_guard_worker"]
